--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,16 @@
     "Lua.diagnostics.globals": [
         "CreateFrame",
         "SlashCmdList",
-        "UnitGUID"
+        "UnitGUID",
+        "C_DateAndTime",
+        "C_QuestLog",
+        "C_TaskQuest",
+        "GetQuestProgressBarPercent",
+        "C_MythicPlus",
+        "UnitName",
+        "UnitClass",
+        "UnitLevel",
+        "RAID_CLASS_COLORS",
+        "UIParent"
     ]
 }
